{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 21,
  "lineage": "70f2ba57-a34d-3d74-b113-27929103aa5c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myterraformnic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/006d678f-cb73-4544-b2d7-7300e2980425/resourceGroups/sam-sparta/providers/Microsoft.Network/networkInterfaces/myNIC",
            "ip_configuration": [
              {
                "name": "myNicConfiguration",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/006d678f-cb73-4544-b2d7-7300e2980425/resourceGroups/sam-sparta/providers/Microsoft.Network/publicIPAddresses/myPublicIP",
                "subnet_id": "/subscriptions/006d678f-cb73-4544-b2d7-7300e2980425/resourceGroups/sam-sparta/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-1A-99-E3",
            "name": "myNIC",
            "network_security_group_id": "/subscriptions/006d678f-cb73-4544-b2d7-7300e2980425/resourceGroups/sam-sparta/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "sam-sparta",
            "tags": {
              "environment": "Terraform Demo"
            },
            "virtual_machine_id": "/subscriptions/006d678f-cb73-4544-b2d7-7300e2980425/resourceGroups/sam-sparta/providers/Microsoft.Compute/virtualMachines/myVM"
          },
          "dependencies": [
            "azurerm_network_security_group.myterraformnsg",
            "azurerm_public_ip.myterraformpublicip",
            "azurerm_resource_group.sam-terraformgroup",
            "azurerm_subnet.myterraformsubnet",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "sam-terraformnic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/006d678f-cb73-4544-b2d7-7300e2980425/resourceGroups/sam-sparta/providers/Microsoft.Network/networkInterfaces/sam-NIC",
            "ip_configuration": [
              {
                "name": "sam-NicConfiguration",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/006d678f-cb73-4544-b2d7-7300e2980425/resourceGroups/sam-sparta/providers/Microsoft.Network/publicIPAddresses/sam-PublicIP",
                "subnet_id": "/subscriptions/006d678f-cb73-4544-b2d7-7300e2980425/resourceGroups/sam-sparta/providers/Microsoft.Network/virtualNetworks/sam-Vnet/subnets/sam-Subnet"
              }
            ],
            "location": "northeurope",
            "name": "sam-NIC",
            "network_security_group_id": "/subscriptions/006d678f-cb73-4544-b2d7-7300e2980425/resourceGroups/sam-sparta/providers/Microsoft.Network/networkSecurityGroups/sam-NetworkSecurityGroup",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "sam-sparta",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "dependencies": [
            "azurerm_network_security_group.sam-terraformnsg",
            "azurerm_public_ip.sam-terraformpublicip",
            "azurerm_resource_group.sam-terraformgroup",
            "azurerm_subnet.sam-terraformsubnet",
            "azurerm_virtual_network.sam-terraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "myterraformnsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/006d678f-cb73-4544-b2d7-7300e2980425/resourceGroups/sam-sparta/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "location": "eastus",
            "name": "myNetworkSecurityGroup",
            "resource_group_name": "sam-sparta",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "dependencies": [
            "azurerm_resource_group.sam-terraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "sam-terraformnsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/006d678f-cb73-4544-b2d7-7300e2980425/resourceGroups/sam-sparta/providers/Microsoft.Network/networkSecurityGroups/sam-NetworkSecurityGroup",
            "location": "northeurope",
            "name": "sam-NetworkSecurityGroup",
            "resource_group_name": "sam-sparta",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "dependencies": [
            "azurerm_resource_group.sam-terraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myterraformpublicip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/006d678f-cb73-4544-b2d7-7300e2980425/resourceGroups/sam-sparta/providers/Microsoft.Network/publicIPAddresses/myPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.87.70.92",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "myPublicIP",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "sam-sparta",
            "sku": "Basic",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "dependencies": [
            "azurerm_resource_group.sam-terraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "sam-terraformpublicip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/006d678f-cb73-4544-b2d7-7300e2980425/resourceGroups/sam-sparta/providers/Microsoft.Network/publicIPAddresses/sam-PublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "sam-PublicIP",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "sam-sparta",
            "sku": "Basic",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "dependencies": [
            "azurerm_resource_group.sam-terraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "myterraformsubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "id": "/subscriptions/006d678f-cb73-4544-b2d7-7300e2980425/resourceGroups/sam-sparta/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet",
            "ip_configurations": [
              "/subscriptions/006d678f-cb73-4544-b2d7-7300e2980425/resourceGroups/sam-sparta/providers/Microsoft.Network/networkInterfaces/myNIC/ipConfigurations/myNicConfiguration"
            ],
            "name": "mySubnet",
            "resource_group_name": "sam-sparta",
            "virtual_network_name": "myVnet"
          },
          "dependencies": [
            "azurerm_resource_group.sam-terraformgroup",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sam-terraformsubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "id": "/subscriptions/006d678f-cb73-4544-b2d7-7300e2980425/resourceGroups/sam-sparta/providers/Microsoft.Network/virtualNetworks/sam-Vnet/subnets/sam-Subnet",
            "name": "sam-Subnet",
            "resource_group_name": "sam-sparta",
            "virtual_network_name": "sam-Vnet"
          },
          "dependencies": [
            "azurerm_resource_group.sam-terraformgroup",
            "azurerm_virtual_network.sam-terraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myterraformnetwork",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/006d678f-cb73-4544-b2d7-7300e2980425/resourceGroups/sam-sparta/providers/Microsoft.Network/virtualNetworks/myVnet",
            "location": "eastus",
            "name": "myVnet",
            "resource_group_name": "sam-sparta",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/006d678f-cb73-4544-b2d7-7300e2980425/resourceGroups/sam-sparta/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet",
                "name": "mySubnet"
              }
            ],
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "dependencies": [
            "azurerm_resource_group.sam-terraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "sam-terraformnetwork",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/006d678f-cb73-4544-b2d7-7300e2980425/resourceGroups/sam-sparta/providers/Microsoft.Network/virtualNetworks/sam-Vnet",
            "location": "northeurope",
            "name": "sam-Vnet",
            "resource_group_name": "sam-sparta",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "dependencies": [
            "azurerm_resource_group.sam-terraformgroup"
          ]
        }
      ]
    }
  ]
}